[gd_scene load_steps=10 format=2]

[ext_resource path="res://assets/MainMenu/gr4kelpiami21.webp" type="Texture" id=1]
[ext_resource path="res://assets/Fonts/CompassPro.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/Fonts/ExpressionPro.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scenes/Settings/Settings.gd" type="Script" id=4]

[sub_resource type="DynamicFont" id=1]
size = 40
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 80
outline_size = 1
outline_color = Color( 0.305882, 0.298039, 0.298039, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 80
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=4]
size = 60
outline_size = 1
outline_color = Color( 0.243137, 0.239216, 0.239216, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 80
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Settings" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 4 )

[node name="TextureRect" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 1 )
expand = true

[node name="MarginContainer" type="MarginContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 50
custom_constants/margin_top = 20
custom_constants/margin_left = 50
custom_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
margin_left = 50.0
margin_top = 20.0
margin_right = 488.0
margin_bottom = 175.0

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_right = 438.0
margin_bottom = 70.0
alignment = 1

[node name="BackButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_right = 105.0
margin_bottom = 70.0
size_flags_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "<BACK"
flat = true

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 109.0
margin_right = 434.0
margin_bottom = 70.0
rect_pivot_offset = Vector2( 1045, 644 )
size_flags_horizontal = 3
custom_fonts/font = SubResource( 2 )
text = "SETTINGS"
align = 1

[node name="Container" type="Container" parent="MarginContainer/VBoxContainer/HBoxContainer"]
margin_left = 438.0
margin_right = 438.0
margin_bottom = 70.0
size_flags_horizontal = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
margin_left = 88.0
margin_top = 74.0
margin_right = 350.0
margin_bottom = 155.0
size_flags_horizontal = 4
size_flags_vertical = 6
alignment = 1

[node name="Volume_down" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_right = 37.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 3 )
text = "<"
flat = true

[node name="Volume" type="Label" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 41.0
margin_top = 13.0
margin_right = 221.0
margin_bottom = 67.0
custom_fonts/font = SubResource( 4 )
text = "VOLUME"

[node name="Volume_up" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer2"]
margin_left = 225.0
margin_right = 262.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 5 )
text = ">"
flat = true

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Volume_down" to="." method="_on_Volume_down_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer2/Volume_up" to="." method="_on_Volume_up_pressed"]
